Adding Integration Test Cases

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.member.task</groupId>
-    <artifactId>member-management</artifactId>
+    <artifactId>member-management-rest-api</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -35,7 +35,10 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.16.16</version>
+            <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
